--- a/bai15/comstacme.html
+++ b/bai15/comstacme.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <p>
-      <a href="http://127.0.0.1:5500/bai15/home.html">home</a>
-      <a href="http://127.0.0.1:5500/bai15/vist.html"> vist</a>
-      <a href="http://127.0.0.1:5500/bai15/comstacme.html"> cv</a>
+      <a href="https://nhatvi0610.github.io/tuhoclaptrinhweb/bai15/home.html">home</a>
+      <a href="https://nhatvi0610.github.io/tuhoclaptrinhweb/bai15/vist.html"> vist</a>
+      <a href="https://nhatvi0610.github.io/tuhoclaptrinhweb/bai15/comstacme.html.html"> cv</a>
     </p>
     <p><b>tell:</b> <a href="tel">0337194006</a></p>
     <p>
@@ -19,3 +19,4 @@
     <p>có gì thì liên hệ tôi nhé !</p>
   </body>
 </html>
+
