--- a/bai15/home.html
+++ b/bai15/home.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <p>
-      <a href="http://127.0.0.1:5500/bai15/home.html">home</a>
-      <a href="http://127.0.0.1:5500/bai15/vist.html"> vist</a>
-      <a href="http://127.0.0.1:5500/bai15/comstacme.html"> cv</a>
+      <a href="https://nhatvi0610.github.io/tuhoclaptrinhweb/bai15/home.html">home</a>
+      <a href="https://nhatvi0610.github.io/tuhoclaptrinhweb/bai15/vist.html"> vist</a>
+      <a href="https://nhatvi0610.github.io/tuhoclaptrinhweb/bai15/comstacme.html.html"> cv</a>
     </p>
     <h1>Profile</h1>
     <p>Lorem ipsum dolor sit amet.</p>
@@ -38,3 +38,4 @@
     <hr />
   </body>
 </html>
+
